--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -45,16 +45,17 @@
 
                         </div>
                     </div>
-                    <div class="col text-start ms-5 ps-5">
+                    <div class="row justify-content-center text-center">
+                        <div class="col-6 offset-1 me-5">
                             <div class="row mt-3">
-                                <div class="col-2">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">ID</p>
                                         <hr>
                                         <input type="text" th:field="*{username}" class="form-control fontHv mt-0 pt-0 fs-6" style="color:black" readonly>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">성별</p>
                                         <hr>
@@ -63,7 +64,7 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-2">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">지정 속도</p>
                                         <hr>
@@ -74,14 +75,14 @@
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-3">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">닉네임</p>
                                         <hr>
                                         <input type="text" th:field="*{userNickname}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput4" placeholder="name@example.com">
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">출생년도</p>
                                         <hr>
@@ -90,14 +91,14 @@
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-3">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">키</p>
                                         <hr>
                                         <input type="text" th:field="*{userHeight}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput7" placeholder="name@example.com">
                                     </div>
                                 </div>
-                                <div class="col-3">
+                                <div class="col">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">몸무게</p>
                                         <hr>
@@ -105,6 +106,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </div>
                     </form>
                 </div>
