--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -122,14 +122,14 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="row mt-4">
+                        <!--<div class="row mt-4">
                             <div class="col">
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination justify-content-center" id="pagination">
                                     </ul>
                                 </nav>
                             </div>
-                        </div>
+                        </div>-->
                         </div>
                     </div>
                 </div>
@@ -239,10 +239,10 @@
     }
 </script>
 <script th:inline="javascript">
-    const url = window.location.href;
+    /**const url = window.location.href;
     const lastSlashIndex = url.lastIndexOf("/");
     const currentPage = Number(url.substring(lastSlashIndex + 1)) + 1;
-    const totalPage = [[${nodeList.totalPage}]];
+    const totalPage = [[${userList.totalPage}]];
     let paginationHtml = '';
 
     const totalGroup = Math.ceil(totalPage / 10); // 총 그룹 수 계산
@@ -278,7 +278,7 @@
 
     function changePage(pageNumber) {
         location.href = '/admin/users/list/' + (pageNumber - 1);
-    }
+    }**/
 </script>
 </body>
 </html>
