user 페이지네이션 추가

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -74,7 +74,7 @@
                 행사 관리
             </div>
         </a>
-        <a href="/admin/users/list" th:href="@{/admin/users/list}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'user' ? 'link' : 'white'">
+        <a href="/admin/users/list" th:href="@{/admin/users/list/0}"  class="row menu" style="height : 7vh; line-height: 7vh;" th:classappend="${param1} == 'user' ? 'link' : 'white'">
             <div class="col-3 ms-4 mt-2 ps-3">
                 <i class="fa-solid fa-users fs-4"></i>
             </div>
