--- a/src/main/resources/templates/user/user-manage.html
+++ b/src/main/resources/templates/user/user-manage.html
@@ -122,14 +122,14 @@
                                 </tbody>
                             </table>
                         </div>
-                        <!--<div class="row mt-4">
+                        <div class="row mt-4">
                             <div class="col">
                                 <nav aria-label="Page navigation example">
                                     <ul class="pagination justify-content-center" id="pagination">
                                     </ul>
                                 </nav>
                             </div>
-                        </div>-->
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -235,11 +235,11 @@
 
     function searchConnect(){
         let wordBox = document.getElementById("word");
-        window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
+        window.self.location.href = 'http://localhost:60002/admin/users/search/' + wordBox.value;
     }
 </script>
 <script th:inline="javascript">
-    /**const url = window.location.href;
+    const url = window.location.href;
     const lastSlashIndex = url.lastIndexOf("/");
     const currentPage = Number(url.substring(lastSlashIndex + 1)) + 1;
     const totalPage = [[${userList.totalPage}]];
@@ -278,7 +278,7 @@
 
     function changePage(pageNumber) {
         location.href = '/admin/users/list/' + (pageNumber - 1);
-    }**/
+    }
 </script>
 </body>
 </html>
