--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -19,12 +19,134 @@
                 <div class="row mb-4 ms-5 fs-1 fontHv">
                     AI 모델 관리
                 </div>
+                <div class="row">
+                    <div class="col-6 offset-2">
+                        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded text-center sidebarItem">
+                            <div class="row align-items-center">
+                                <div class="form-floating mb-4">
+                                    <p class="fs-3 sidebarItem text-start ms-4">필터링</p>
+                                    <hr>
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    최소 시간(초)
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6" id="min">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    최대 시간(초)
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6" id="max">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    경로 매핑
+                                </div>
+                                <div class="col">
+                                    <input type="checkbox" class="checkBoxList" style="width : 2rem; height : 2rem;" id="mapping">
+                                </div>
+                            </div>
+                            <div class="row mb-5">
+                                <div class="col">
+                                    <a class="btn btn-primary" onclick="doFilter()">필터링 시작하기</a>
+                                </div>
+                            </div>
+                            <div class="row mb-3 mt-4">
+                                <div class="col">
+                                    <div class="">기존 데이터 개수</div>
+                                    <div class="fs-3 fontHv" th:text="dataListLength">224</div>
+                                    <div class="mt-2"><button class="btn btn-secondary">다운로드</button></div>
+                                </div>
+                                <div class="col">
+                                    <div>필터링된 데이터 개수</div>
+                                    <div class="fs-3 fontHv" style="color:cornflowerblue" id="filterLength">0</div>
+                                    <div class="mt-2"><button class="btn btn-primary">다운로드</button></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <script th:replace="fragment::search"></script>
+<!--
 
+                    <div class="col">
+                        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded text-center sidebarItem">
+                            <div class="row align-items-center">
+                            <div class="form-floating mb-4">
+                                <p class="fs-3 sidebarItem text-start ms-4">하이퍼파라미터 설정</p>
+                                <hr>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    은닉층 개수
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    EPOCHS 개수
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    층 개수
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6">
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col fs-6 sidebarItem">
+                                    학습률
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control fontHv fs-6">
+                                </div>
+                            </div>
+                            <div class="row mt-2">
+                                <div><button class="btn btn-primary">학습 시작하기</button></div>
+                            </div>
+                            <div class="row">
+</div>
+</div>
+</div>
+</div>
+-->
+<script>
+    function doFilter(){
+
+        let min = document.getElementById("min").value;
+        let max = document.getElementById("max").value;
+        let mapping = document.getElementById("mapping").checked;
+
+        fetch(`http://ceprj.gachon.ac.kr:60002/admin/ai/${min}/${max}/${mapping}`) // 데이터를 받아올 URL
+            .then(response => response.json()) // JSON 형식으로 응답을 파싱
+            .then(data => {
+                // 응답 데이터를 처리
+                console.log("Received integer value:", data);
+                document.getElementById("filterLength").innerText = data.length;
+            })
+            .catch(error => {
+                // 에러 처리
+                console.error('Error fetching data:', error);
+            });
+    }
+</script>
 <script>
     let rows = document.getElementsByClassName('row menu');
     let cnt = 0;
