--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -44,14 +44,6 @@
                                     <input type="text" class="form-control fontHv fs-6" id="max">
                                 </div>
                             </div>
-                            <div class="row mb-3">
-                                <div class="col fs-6 sidebarItem">
-                                    경로 매핑
-                                </div>
-                                <div class="col">
-                                    <input type="checkbox" class="checkBoxList" style="width : 2rem; height : 2rem;" id="mapping">
-                                </div>
-                            </div>
                             <div class="row mb-5">
                                 <div class="col">
                                     <a class="btn btn-primary" onclick="doFilter()">필터링 시작하기</a>
@@ -60,13 +52,11 @@
                             <div class="row mb-3 mt-4">
                                 <div class="col">
                                     <div class="">기존 데이터 개수</div>
-                                    <div class="fs-3 fontHv" th:text="dataListLength">224</div>
-                                    <div class="mt-2"><button class="btn btn-secondary">다운로드</button></div>
+                                    <div class="fs-3 fontHv" th:text="${dataListLength}">224</div>
                                 </div>
                                 <div class="col">
                                     <div>필터링된 데이터 개수</div>
                                     <div class="fs-3 fontHv" style="color:cornflowerblue" id="filterLength">0</div>
-                                    <div class="mt-2"><button class="btn btn-primary">다운로드</button></div>
                                 </div>
                             </div>
                         </div>
@@ -132,13 +122,12 @@
 
         let min = document.getElementById("min").value;
         let max = document.getElementById("max").value;
-        let mapping = document.getElementById("mapping").checked;
 
         fetch(`http://ceprj.gachon.ac.kr:60002/admin/ai/${min}/${max}/${mapping}`) // 데이터를 받아올 URL
             .then(response => response.json()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 // 응답 데이터를 처리
-                console.log("Received integer value:", data);
+                alert(data);
                 document.getElementById("filterLength").innerText = data.length;
             })
             .catch(error => {
