--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -122,7 +122,7 @@
         let min = document.getElementById("min").value;
         let max = document.getElementById("max").value;
 
-        fetch(`http://localhost:60002/admin/ai/${min}/${max}`) // 데이터를 받아올 URL
+        fetch(`http://ceprj.gachon.ac.kr:60002/admin/ai/${min}/${max}`) // 데이터를 받아올 URL
             .then(response => response.json()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 document.getElementById("filterLength").innerText = data;
@@ -140,7 +140,7 @@
         let hidden = document.getElementById("hidden").value;
 
 
-        fetch(`http://localhost:60002/admin/ai/model/${hidden}/${epoch}/${rate}/${layer}`) // 데이터를 받아올 URL
+        fetch(`http://ceprj.gachon.ac.kr:60002/admin/ai/model/${hidden}/${epoch}/${rate}/${layer}`) // 데이터를 받아올 URL
             .then(response => response.json()) // JSON 형식으로 응답을 파싱
             .then(data => {
                 document.getElementById("filterLength").innerText = data;
