--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -10,7 +10,7 @@
 <div class="container-fluid">
     <header th:replace="~{/fragment :: header}"></header>
     <div class="row">
-        <div th:replace="~{fragment :: sidebar('edge')}"></div>
+        <div th:replace="~{fragment :: sidebar('ai')}"></div>
         <div class="col-10" style="background-color: rgb(242,248,250); width: 85%; margin-left:15%; margin-top:5%;">
             <div class="container-fluid mt-4 p-0" style="background-color: rgb(242,248,250);">
                 <div class="row ms-5 mb-3 mt-2 nodeHeader">
