--- a/src/main/resources/templates/event/event-manage.html
+++ b/src/main/resources/templates/event/event-manage.html
@@ -22,12 +22,14 @@
                         </div>
                         <div class="row bg-white">
                             <div class="col-5 align-items-center">
+                                <!--
                                 <div class="row mt-2">
                                     <div class="col pe-0" style="position : relative">
                                         <input type="text" style="border-radius: 0" class="form-control form-input" placeholder="이름 검색" id="word">
                                         <i class="bi bi-search fs-5" style="position : absolute; top: 11%; left : 95%; cursor: pointer" onclick="searchConnect()"></i>
                                     </div>
                                 </div>
+                                -->
                             </div>
                             <div class="col-3 offset-4 align-items-center text-end">
                                 <a href="/admin/event/add" class="btn btn-primary add mt-2 sidebarItem fs-6">행사 등록</a>
@@ -59,20 +61,7 @@
                         <div class="row mt-4">
                             <div class="col">
                                 <nav aria-label="Page navigation example">
-                                    <ul class="pagination justify-content-center">
-                                        <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Previous">
-                                                <span aria-hidden="true">&laquo;</span>
-                                            </a>
-                                        </li>
-                                        <li class="page-item" style="cursor: pointer" th:each="pageNumber : ${#numbers.sequence(1, eventList.totalPage)}"
-                                            th:onclick="|location.href='@{/admin/event/list/{pageNumber}(pageNumber= ${pageNumber} -1)}'|"
-                                            ><a class="page-link" th:text="${pageNumber}">1</a></li>
-                                        <li class="page-item">
-                                            <a class="page-link" href="#" aria-label="Next">
-                                                <span aria-hidden="true">&raquo;</span>
-                                            </a>
-                                        </li>
+                                    <ul class="pagination justify-content-center" id="pagination">
                                     </ul>
                                 </nav>
                             </div>
@@ -125,6 +114,48 @@
     function searchConnect(){
         let wordBox = document.getElementById("word");
         window.self.location.href = 'http://localhost:60002/admin/node/search/' + wordBox.value;
+    }
+</script>
+<script th:inline="javascript">
+    const url = window.location.href;
+    const lastSlashIndex = url.lastIndexOf("/");
+    const currentPage = Number(url.substring(lastSlashIndex + 1)) + 1;
+    const totalPage = [[${eventList.totalPage}]];
+    let paginationHtml = '';
+
+    const totalGroup = Math.ceil(totalPage / 10); // 총 그룹 수 계산
+    let currentGroup = Math.ceil(currentPage / 10); // 현재 페이지의 그룹 번호 계산
+
+    if (currentGroup > 1) {
+        paginationHtml += '<li class="page-item">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + ((currentGroup - 1) * 10) + ')">&laquo;</a>';
+        paginationHtml += '</li>';
+    }
+
+    // 현재 그룹의 페이지 링크 생성
+    let startPage = (currentGroup - 1) * 10 + 1;
+    let endPage = Math.min(currentGroup * 10, totalPage);
+    for (let i = startPage; i <= endPage; i++) {
+        paginationHtml += '<li aria-current="page" class="page-item';
+        if (i == currentPage) {
+            paginationHtml += ' active';
+        }
+        paginationHtml += '">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + i + ')">' + i + '</a>';
+        paginationHtml += '</li>';
+    }
+
+    // 다음 페이지 그룹 링크 생성
+    if (currentGroup < totalGroup) {
+        paginationHtml += '<li class="page-item">';
+        paginationHtml += '<a class="page-link" href="#" onclick="changePage(' + (currentGroup * 10 + 1) + ')">&raquo;</a>';
+        paginationHtml += '</li>';
+    }
+
+    document.getElementById('pagination').innerHTML = paginationHtml;
+
+    function changePage(pageNumber) {
+        location.href = '/admin/users/list/' + (pageNumber - 1);
     }
 </script>
 </body>
