--- a/src/main/resources/templates/inquiry/inquiry-manage.html
+++ b/src/main/resources/templates/inquiry/inquiry-manage.html
@@ -22,12 +22,14 @@
                             </div>
                             <div class="row bg-white">
                                 <div class="col-5 align-items-center">
+                                    <!--
                                     <div class="row mt-2">
                                         <div class="col pe-0" style="position : relative">
                                             <input type="text" style="border-radius: 0" class="form-control form-input" placeholder="이름 검색" id="word">
                                             <i class="bi bi-search fs-5" style="position : absolute; top: 11%; left : 95%; cursor: pointer" onclick="searchConnect()"></i>
                                         </div>
                                     </div>
+                                    -->
                                 </div>
     <!--                                <div class="col-3 offset-4 align-items-center text-end">-->
     <!--                                    <a href="/admin/event/add" class="btn btn-primary add mt-2 sidebarItem fs-6">문의 등록</a>-->
@@ -57,26 +59,12 @@
                                 </table>
                             </div>
                             <div class="row mt-4">
-                                <div class="col offset-5">
+                                <div class="col">
                                     <nav aria-label="Page navigation example">
-                                        <ul class="pagination">
-                                            <li class="page-item">
-                                                <a class="page-link" href="#" aria-label="Previous">
-                                                    <span aria-hidden="true">&laquo;</span>
-                                                </a>
-                                            </li>
-                                            <li class="page-item" style="cursor: pointer" th:each="pageNumber : ${#numbers.sequence(1, inquiryList.totalPage)}"
-                                                th:onclick="|location.href='@{/admin/inquiry/list/{pageNumber}(pageNumber= ${pageNumber} -1)}'|"
-                                            ><a class="page-link" th:text="${pageNumber}">1</a></li>
-                                            <li class="page-item">
-                                                <a class="page-link" href="#" aria-label="Next">
-                                                    <span aria-hidden="true">&raquo;</span>
-                                                </a>
-                                            </li>
+                                        <ul class="pagination justify-content-center" id="pagination">
                                         </ul>
                                     </nav>
                                 </div>
-
                             </div>
                         </div>
                     </div>
