--- a/src/main/resources/templates/node/node-manage.html
+++ b/src/main/resources/templates/node/node-manage.html
@@ -73,6 +73,7 @@
                             지점목록
                         </div>
                         <div class="row bg-white">
+                            <!--
                             <div class="col-5 align-items-center">
                                 <div class="row mt-2">
                                     <div class="col pe-0" style="position : relative">
@@ -81,7 +82,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3 offset-4 align-items-center text-end">
+                            -->
+                            <div class="col-3 offset-9 align-items-end text-end">
                                 <a href="/admin/node/add" th:href="@{/admin/node/add}" class="mt-3 btn btn-primary add">지점 추가</a>
                             </div>
                         </div>
